--- a/views/layout.html
+++ b/views/layout.html
@@ -50,24 +50,24 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="#">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li class="">
-                        <a href="#">Schedule</a>
+                        <a href="/schedule">Schedule</a>
                     </li>
                     <li>
-                        <a href="#">Instructors</a>
+                        <a href="/instructors">Instructors</a>
                     </li>
                     <li>
-                        <a href="#">Classes</a>
+                        <a href="/classes">Classes</a>
                     </li>
                     <li>
-                        <a href="#">Membership &amp; Pricing</a>
+                        <a href="/pricing">Membership &amp; Pricing</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">Store</a>
+                        <a href="/store">Store</a>
                     </li>
                 </ul>
             </div>
