Misc code cleanup

--- a/views/landing.html
+++ b/views/landing.html
@@ -5,7 +5,7 @@
 {% endfor %} {% endmacro %} {% block main %}
 <div class="row">
 
-    <div id="left" class="col-xs-12 col-lg-3 col-sm-4">
+    <div id="left" class="col-xs-12 col-sm-4 col-lg-3">
         <div id="next" class="next card">
             <h2>Upcoming Classes</h2>
             <h3>{{'Tonight' if pm else 'Today'}}</h3>
