Viewport and schedule

--- a/views/layout.html
+++ b/views/layout.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">{%block meta%} {%endblock%}
     <!-- /meta -->
     <link rel="author" href="humans.txt">
@@ -52,7 +53,7 @@
                     <li class="active">
                         <a href="/">Home</a>
                     </li>
-                    <li class="">
+                    <li>
                         <a href="/schedule">Schedule</a>
                     </li>
                     <li>
