--- a/public/styles/ananda.css
+++ b/public/styles/ananda.css
@@ -144,3 +144,34 @@ footer > a {
         padding:1em;
     }
 } */
+
+
+
+/*
+============================================================================
+                        Schedule
+============================================================================
+*/
+table th{
+    font-size:1.2em;
+    background-color:#FEFEFE;
+}
+table tr{
+    background-color:#F5F5F5;
+}
+table tr:first-child {
+    border-bottom-width: 2px;
+    border-bottom-style:solid;
+}
+table th.day{
+    font-size:1.1em;
+}
+table td.class-time{
+    text-align:center;
+}
+table th.no-classes{
+    font-size:1.1em;
+    color:#777;
+    font-style: italic;
+    background-color:#EFEFEF;
+}
