Layout header linked

--- a/views/layout.html
+++ b/views/layout.html
@@ -31,7 +31,7 @@
     <header class="container-fluid">
         <div class="row">
             <div class="col-xs-12" id="title">
-                <h1>Ananda Yoga</h1>
+                <h1><a href="/">Ananda Yoga</a></h1>
             </div>
         </div>
     </header>
