--- a/public/styles/ananda.css
+++ b/public/styles/ananda.css
@@ -185,7 +185,7 @@ table td.class-time{
 }
 table th.no-classes{
     font-size:1.1em;
-    color:#AAA;
+    color:#D0D0D0;
     font-style: italic;
-    background-color:#F5F5F5;
+    background-color:#FFFFFF;
 }
